# Scalable_Chat_System_Backend

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  docker-compose_just_db.yml
src/chat_server/: Dockerfile  chat_server.py  client.html  pyproject.toml
src/chat_server/utils/: config.py  constants.py  jwt_helper.py
src/coordinator/: Dockerfile  README.md  coordinator.py  pyproject.toml
src/coordinator/routes/: api.py  auth.py
src/coordinator/tests/: auth.py  test_coordinator.py
src/coordinator/utils/: constants.py  jwt_helper.py  users.py
src/id_generator/: Dockerfile  README.md  id_generator.py  pyproject.toml
src/id_generator/routes/: api.py
src/integrated_tests/: pyproject.toml
src/integrated_tests/tests/: test_messages.py
src/integrated_tests/utils/: constants.py
src/intergated_tests/: pyproject.toml
src/intergated_tests/tests/: test_messages.py
src/intergated_tests/utils/: constants.py
src/kv_store/: Dockerfile  README.md  kv_store.py  pyproject.toml
src/kv_store/routes/: api.py
src/libs/id_generator_lib/: .env_example  docker-compose.yml  pyproject.toml
src/libs/id_generator_lib/id_generator_lib/: __init__.py  database_conn.py  init_database.py  postgres_id_generator.py
src/libs/id_generator_lib/tests/: test_id_generator.py
src/libs/kv_store_lib/: docker-compose.yml  kv_store_lib.py  pyproject.toml
src/libs/kv_store_lib/tests/: docker-compose.yml  test_kv_store.py
