[project]
name = "chat-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Ariel Nowik"}
]
requires-python = ">=3.11"
dependencies = [
    "websockets (>=16.0,<17.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
]

[tool.poetry.scripts]
start_chat_server = "chat_server:start_chat_server"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
