[project]
name = "coordinator"
version = "0.1.0"
description = ""
authors = [
    {name = "Ariel Nowik"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyjwt (>=2.12.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "flask[async] (>=3.1.3,<4.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "websockets (>=16.0,<17.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
]
[tool.poetry.dependencies]
flask = {extras = ["async"], version = "^3.1.3"}

[tool.poetry.scripts]
start_coordinator = "coordinator:start_coordinator"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
