[project]
name = "coordinator"
version = "0.1.0"
description = ""
authors = [
    {name = "Ariel Nowik"}
]
requires-python = ">=3.11"
dependencies = [
    "pyjwt (>=2.12.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "flask[async] (>=3.1.3,<4.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "websockets (>=16.0,<17.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "opentelemetry-api (>=1.42.1,<2.0.0)",
    "opentelemetry-sdk (>=1.42.1,<2.0.0)",
    "opentelemetry-distro (>=0.63b1,<0.64)",
    "opentelemetry-exporter-otlp-proto-grpc (>=1.42.1,<2.0.0)",
]
[tool.poetry.dependencies]
flask = {extras = ["async"], version = "^3.1.3"}

[tool.poetry.scripts]
start_coordinator = "coordinator:start_coordinator"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
