[project]
name = "id-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Ariel Nowik"}
]
requires-python = ">=3.11"

[tool.poetry.dependencies]
id_generator_lib = { file = "dist/id_generator_lib-0.1.2-py3-none-any.whl" }
flask = {extras = ["async"], version = "^3.1.3"}

[tool.poetry.scripts]
start_id_generator = "id_generator:start_id_generator"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

