[project]
name = "kv-store"
version = "0.1.0"
description = ""
authors = [
    {name = "Ariel Nowik"}
]
requires-python = ">=3.11"
packages = [
    { include = "kv_store.py" }
]

[tool.poetry.scripts]
start_kv_store = "kv_store:start_kv_store"

[tool.poetry.dependencies]
kv_store_lib = { file = "dist/kv_store_lib-0.1.4-py3-none-any.whl" }
flask = {extras = ["async"], version = "^3.1.3"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
