[project]
name = "id-generator-lib"
version = "0.1.4"
description = "Database structure definition for id generator module"
authors = [
    {name = "Your Name",email = "you@example.com"}
]

requires-python = ">=3.11"
dependencies = ["pytest (>=9.0.3,<10.0.0)", "psycopg2-binary (>=2.9.12,<3.0.0)", "dotenv (>=0.9.9,<0.10.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
