[project]
name = "kv-store-lib"
version = "0.1.3"
description = "Kv store interface using redis implementation"
authors = [
    {name = "Ariel Nowik"}
]
requires-python = ">=3.11"
dependencies = [
    "pytest (>=9.0.3,<10.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "redis (>=7.4.0,<8.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
